# CelebMind_CREATOR

./: .gitignore  README.md  db.py  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
.obsidian/: workspace.json
config/: sources.yaml
src/: __init__.py  cli.py
src/pipeline/: __init__.py  chunking.py  clustering.py  embeddings.py  ner.py  synthesis.py
src/scrapers/: __init__.py  ai_search.py  dispatcher.py  imdb_spider.py  news_spider.py  social_spider.py  wikipedia_spider.py
src/storage/: __init__.py  db.py
src/vault/: __init__.py  obsidian_writer.py
src/vault/templates/: event.md  organization.md  person.md  place.md  subject_home.md  work.md
src/web/: __init__.py  app.py  routes.py
src/web/static/: app.js  style.css
src/web/templates/: base.html  index.html  notes.html  scraper_dashboard.html  subject.html  vault_dashboard.html
